--- a/Sales.API/Web.config
+++ b/Sales.API/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="Data Source=zuluserver.database.windows.net;Initial Catalog=sales;Persist Security Info=True;User=mirringo;Password=NoMeLoSe8712!" providerName="System.Data.SqlClient" />
+         connectionString="Data Source=zuluserver.database.windows.net;Initial Catalog=saleszulu;Persist Security Info=True;User=mirringo;Password=NoMeLoSe8712!" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
