--- a/Sales.API/Web.config
+++ b/Sales.API/Web.config
@@ -10,9 +10,15 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="Data Source=zuluserver.database.windows.net;Initial Catalog=saleszulu;Persist Security Info=True;User=mirringo;Password=NoMeLoSe8712!" providerName="System.Data.SqlClient" />
+         connectionString="Data Source=zuluserver.database.windows.net;Initial Catalog=saleszulu;Persist Security Info=True;User=mirringo;Password=NoMeLoSe8712!" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="AdminUser" value="jzuluaga55@hotmail.com" />
+    <add key="AdminPassWord" value="****" />
+    <add key="SMTPName" value="smtp.live.com" />
+    <add key="SMTPPort" value="25" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
