Login with Twitter & Instagram

--- a/Sales/Sales.Android/Sales.Android.csproj
+++ b/Sales/Sales.Android/Sales.Android.csproj
@@ -83,6 +83,8 @@
   <ItemGroup>
     <Compile Include="Implementations\Localize.cs" />
     <Compile Include="Implementations\LoginFacebookPageRenderer.cs" />
+    <Compile Include="Implementations\LoginInstagramPageRenderer.cs" />
+    <Compile Include="Implementations\LoginTwitterPageRenderer.cs" />
     <Compile Include="Implementations\PathService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
