--- a/Sales.Backend/Sales.Backend.csproj
+++ b/Sales.Backend/Sales.Backend.csproj
@@ -218,9 +218,20 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Categories\books.jpeg" />
     <Content Include="Content\Categories\car.png" />
     <Content Include="Content\Categories\clothes.png" />
+    <Content Include="Content\Categories\electronics.jpeg" />
     <Content Include="Content\Categories\electronics.png" />
+    <Content Include="Content\Categories\fashion.png" />
+    <Content Include="Content\Categories\food.png" />
+    <Content Include="Content\Categories\footware.jpeg" />
+    <Content Include="Content\Categories\jewellery.png" />
+    <Content Include="Content\Categories\kids.png" />
+    <Content Include="Content\Categories\kitchen.jpeg" />
+    <Content Include="Content\Categories\mobile.jpeg" />
+    <Content Include="Content\Categories\perfumes.jpeg" />
+    <Content Include="Content\Categories\sports.jpeg" />
     <Content Include="Content\Products\audifonos.png" />
     <Content Include="Content\Products\magic_mouse.png" />
     <Content Include="favicon.ico" />
