--- a/Sales.Backend/Web.config
+++ b/Sales.Backend/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" 
-         connectionString="Data Source=zuluserver.database.windows.net;Initial Catalog=sales;Persist Security Info=True;User=mirringo;Password=NoMeLoSe8712!" 
+         connectionString="Data Source=zulu.database.windows.net;Initial Catalog=sales;Persist Security Info=True;User=mugatu;Password=Roger1974" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
