--- a/Sales.API/Web.config
+++ b/Sales.API/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection"
-         connectionString="Data Source=zuluserver.database.windows.net;Initial Catalog=sales;Persist Security Info=True;User=mirringo;Password=NoMeLoSe8712!" 
+    <add name="DefaultConnection" 
+         connectionString="Data Source=zulu.database.windows.net;Initial Catalog=sales;Persist Security Info=True;User=mugatu;Password=Roger1974" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
