--- a/Sales/Sales.iOS/Info.plist
+++ b/Sales/Sales.iOS/Info.plist
@@ -52,5 +52,7 @@
 	<string>This app needs access to the photo gallery.</string>
 	<key>XSLaunchImageAssets</key>
 	<string>Assets.xcassets/LaunchImages.launchimage</string>
+	<key>UIMainStoryboardFile</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
