--- a/Sales/Sales.iOS/Sales.iOS.csproj
+++ b/Sales/Sales.iOS/Sales.iOS.csproj
@@ -181,6 +181,11 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-83.5x83.5@2x.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchImages.launchimage\splash_1125x2436.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImages.launchimage\splash_2436x1125.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImages.launchimage\splash_1242x2208.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImages.launchimage\splash_750x1334.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImages.launchimage\splash_2208x1242.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -219,7 +224,7 @@
       <Name>Sales.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sales\Sales.csproj">
-      <Project>{43F10B18-8292-4AD1-9581-2B50A91AB543}</Project>
+      <Project>{7DFC75FF-6B97-434C-B016-2BE80DD9214E}</Project>
       <Name>Sales</Name>
     </ProjectReference>
   </ItemGroup>
