--- a/Sales/Sales.iOS/Sales.iOS.csproj
+++ b/Sales/Sales.iOS/Sales.iOS.csproj
@@ -208,7 +208,13 @@
     <PackageReference Include="Xamarin.Auth">
       <Version>1.6.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.583944" />
+    <PackageReference Include="Xamarin.Forms" Version="3.3.0.912540" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>3.3.0.912540</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -217,7 +223,7 @@
       <Name>Sales.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sales\Sales.csproj">
-      <Project>{43F10B18-8292-4AD1-9581-2B50A91AB543}</Project>
+      <Project>{7DFC75FF-6B97-434C-B016-2BE80DD9214E}</Project>
       <Name>Sales</Name>
     </ProjectReference>
   </ItemGroup>
