--- a/Sales/Sales.iOS/Info.plist
+++ b/Sales/Sales.iOS/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Sales</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.Sales</string>
+	<string>com.zulusoftware.SalesPrep</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
